[tool.poetry]
name = "backend"
version = "0.1.0"
description = "na_visualization backend written in python"
authors = ["Soheun YI <soheun@hyperithm.com>"]

[tool.poetry.dependencies]
python = "^3.7.4"
Flask="^1.1.2"
flask-socketio="^5.0.1"
eventlet="^0.30.2"
gunicorn="^20.0.4"
numpy = "^1.20.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
